fix add btn and delete visibility

--- a/ui/front/src/components/shared/all-repos/all-repos.module.scss
+++ b/ui/front/src/components/shared/all-repos/all-repos.module.scss
@@ -18,10 +18,4 @@
 
 .buttonWrapper {
   margin-left: 1rem;
-  visibility: hidden;
-}
-
-.buttonWrapperActive {
-  composes: buttonWrapper;
-  visibility: visible;
 }
